--- a/OOTPiSP/Lab1/Lab1/Lab1.csproj
+++ b/OOTPiSP/Lab1/Lab1/Lab1.csproj
@@ -39,6 +39,17 @@
       <Compile Update="addFlowerForm.cs">
         <SubType>Form</SubType>
       </Compile>
+      <Compile Update="AddPropertiesForm.cs">
+        <SubType>Form</SubType>
+      </Compile>
+      <Compile Update="ShowFlowersForm.cs">
+        <SubType>Form</SubType>
+      </Compile>
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="Microsoft.Data.Sqlite" Version="9.0.3" />
+      <PackageReference Include="System.Data.SQLite" Version="1.0.119" />
     </ItemGroup>
 
 </Project>
