--- a/OOTPiSP/Lab1/Lab1/Lab1.csproj
+++ b/OOTPiSP/Lab1/Lab1/Lab1.csproj
@@ -2,10 +2,10 @@
 
     <PropertyGroup>
         <OutputType>WinExe</OutputType>
-        <TargetFramework>net7.0-windows</TargetFramework>
         <Nullable>enable</Nullable>
         <UseWindowsForms>true</UseWindowsForms>
         <ImplicitUsings>enable</ImplicitUsings>
+        <TargetFramework>net7.0-windows</TargetFramework>
     </PropertyGroup>
 
     <ItemGroup>
@@ -46,6 +46,9 @@
         <SubType>Form</SubType>
       </Compile>
       <Compile Update="ShowPropertiesForm.cs">
+        <SubType>Form</SubType>
+      </Compile>
+      <Compile Update="ChooseTypeForm.cs">
         <SubType>Form</SubType>
       </Compile>
     </ItemGroup>
